Changelog
=========

0.5 (unreleased)
----------------

- Nothing changed yet.


0.4 (2012-06-05)
----------------

- fix js markup [sithmel]


0.3 (2012-05-23)
----------------

- Initial release